--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,15 @@ main {
 	min-width: 300px;
 }
 
+header {
+	padding: 10px;
+	text-align: center;
+}
+
+nav {
+	font-size: small;
+}
+
 section {
 	border-style: solid;
 	margin-top: 20px;
@@ -23,14 +32,36 @@ section {
 	border-radius: 20px;
 	border-width: 3px;
 	padding: 10px;
-	box-shadow: 6px 7px;
 }
 
-section:not(.aboutme):hover {
-	border-width: 3px;
-	box-shadow: 6px 7px 0px rgba(0, 0, 0, 0.75);
-	border-color: rgba(0, 0, 0, 0.75);
-	transition: 0.15s ease-in-out;
+.aboutme {
+	box-shadow: 5px 5px 0px black;
+}
+
+.box {
+	position: relative;
+	background-color: white;
+	transition: all 1s;
+}
+
+.box::before {
+	content: "";
+	border-radius: 20px;
+	position: absolute;
+	top: 10px;
+	left: 10px;
+	width: 100%;
+	height: 100%;
+	transition: all 0.5s;
+	z-index: -1;
+	border-style: none;
+	background-color: black;
+
+	transform: translate(0%, 0%);
+}
+
+.box:hover::before {
+	transform: translate(5px, 5px);
 }
 
 .description {
@@ -63,6 +94,8 @@ img {
 	border-radius: 100%;
 	border-style: dotted;
 	border-width: 2px;
+	position: relative;
+	transition: all 1s;
 }
 
 figcaption {
