add transparent picture

--- a/css/styles.css
+++ b/css/styles.css
@@ -83,19 +83,17 @@ ul {
 	list-style: none;
 }
 
-figure {
+.profilepicture {
 	width: 150px;
 	margin-left: auto;
 	margin-right: 0;
 }
 
-img {
+.profilepicture > img {
 	width: 100%;
 	border-radius: 100%;
 	border-style: dotted;
 	border-width: 2px;
-	position: relative;
-	transition: all 1s;
 }
 
 figcaption {
