--- a/css/styles.css
+++ b/css/styles.css
@@ -14,8 +14,13 @@ header {
 	text-align: center;
 }
 
-nav {
+.nav {
 	font-size: small;
+	width: 300px;
+	margin: auto;
+	display: flex;
+	justify-content: center;
+	gap: 20px;
 }
 
 main {
@@ -90,11 +95,6 @@ section {
 
 ul {
 	list-style: none;
-}
-
-.nav li {
-	display: inline;
-	padding: 0px 10px 0px 10px;
 }
 
 .profilepicture {
