--- a/css/styles.css
+++ b/css/styles.css
@@ -132,7 +132,7 @@ a {
 
 footer {
 	text-align: center;
-	padding: 30px;
+	padding: 30px 0 0 0;
 	font-size: small;
 }
 
@@ -157,8 +157,4 @@ footer {
 	background-color: rgb(116, 116, 116);
 	color: white;
 	font-size: 0.9rem;
-}
-
-.contactlinks {
-	margin: auto;
 }
