--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,9 @@ header {
 	background-color: white;
 	position: fixed;
 	width: 100%;
+	top: 0;
 	z-index: 1;
+	box-shadow: 0 0px 10px 15px white;
 }
 
 .nav {
@@ -66,6 +68,7 @@ section {
 	min-width: 150px;
 	max-width: 700px;
 	height: 100%;
+	scroll-margin-top: 90px;
 }
 
 .aboutme {
