--- a/css/styles.css
+++ b/css/styles.css
@@ -1,198 +1,206 @@
 *,
 *::before,
 *::after {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 @media only screen and (max-width: 600px) {
-	.infosaboutme {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		gap: 40px;
-		justify-content: space-between;
-		width: 300px;
-	}
-	td.date {
-		max-width: 80px;
-	}
+  .infosaboutme {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+    justify-content: space-between;
+    width: 300px;
+  }
+  td.date {
+    max-width: 80px;
+  }
 }
 
 body {
-	font-family: sans-serif;
-	line-height: 1.5;
-	padding: 20px;
+  font-family: sans-serif;
+  line-height: 1.5;
+  padding: 20px;
 }
 
 header {
-	padding: 10px;
-	text-align: center;
-	background-color: white;
-	position: sticky;
-	width: 100%;
-	top: 0;
-	z-index: 1;
-	box-shadow: 0 0px 10px 15px white;
+  padding: 10px;
+  text-align: center;
+  background-color: white;
+  position: sticky;
+  width: 100%;
+  top: 0;
+  z-index: 1;
+  box-shadow: 0 0px 10px 15px white;
 }
 
 .nav {
-	font-size: small;
-	margin: auto;
-	display: flex;
-	justify-content: center;
-	gap: 20px;
+  font-size: small;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
 }
 
 main {
-	display: flex;
-	flex-wrap: wrap;
-	gap: 15px;
-	justify-content: space-around;
-	margin: auto;
-	margin-top: 5px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+  justify-content: space-around;
+  margin: auto;
+  margin-top: 5px;
 }
 
 section {
-	border-style: solid;
-	margin-top: 10px;
-	margin-bottom: 10px;
-	border-radius: 20px;
-	border-width: 3px;
-	padding: 10px;
-	height: 100%;
-	scroll-margin: 100px;
+  border-style: solid;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-radius: 20px;
+  border-width: 3px;
+  padding: 10px;
+  height: 100%;
+  scroll-margin: 100px;
 }
 
 .aboutme {
-	box-shadow: 6px 6px 0px black;
-	display: flex;
-	flex-wrap: wrap;
-	flex-direction: column;
-	min-width: 200px;
-	max-width: 500px;
+  box-shadow: 6px 6px 0px black;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  min-width: 200px;
+  max-width: 500px;
 }
 
 .infosaboutme {
-	display: flex;
-	align-items: center;
-	gap: 40px;
-	justify-content: space-around;
+  display: flex;
+  align-items: center;
+  gap: 40px;
+  justify-content: space-around;
 }
 
 .box {
-	position: relative;
-	background-color: white;
-	transition: all 1s;
+  position: relative;
+  background-color: white;
+  transition: all 1s;
 }
 
 .box::before {
-	content: "";
-	border-radius: 20px;
-	position: absolute;
-	top: 10px;
-	left: 10px;
-	width: 100%;
-	height: 100%;
-	transition: all 0.5s;
-	z-index: -1;
-	border-style: none;
-	background-color: black;
-	transform: translate(0%, 0%);
+  content: "";
+  border-radius: 20px;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  width: 100%;
+  height: 100%;
+  transition: all 0.5s;
+  z-index: -1;
+  border-style: none;
+  background-color: black;
+  transform: translate(0%, 0%);
 }
 
 .box:hover::before {
-	transform: translate(5px, 5px);
+  transform: translate(5px, 5px);
 }
 
 .description {
-	width: 200px;
+  width: 200px;
 }
 
 .description h3 {
-	text-align: center;
+  text-align: center;
 }
 
 ul {
-	list-style: none;
+  list-style: none;
 }
 
 .profilepicture {
-	width: 150px;
+  width: 150px;
 }
 
 .profilepicture > img {
-	width: 100%;
-	border-radius: 100%;
-	border-style: dotted;
-	border-width: 2px;
+  width: 100%;
+  border-radius: 100%;
+  border-style: dotted;
+  border-width: 2px;
 }
 
 figcaption {
-	text-align: center;
+  text-align: center;
 }
 
 a {
-	text-decoration: none;
-	color: black;
+  text-decoration: none;
+  color: black;
 }
 
 table {
-	width: 100%;
-	border-collapse: collapse;
+  width: 100%;
+  border-collapse: collapse;
 }
 
 th {
-	text-align: left;
+  text-align: left;
 }
 td,
 th {
-	padding: 5px 5px 5px 0;
+  padding: 5px 5px 5px 0;
+}
+
+thead th {
+  background-color: white;
+}
+
+tr {
+  cursor: pointer;
 }
 
 td.date {
-	width: 150px;
+  width: 150px;
 }
 
 tr:hover {
-	background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .biographyemoji {
-	width: 10px;
+  width: 10px;
 }
 
 td.biographycontent {
-	min-width: 150px;
+  min-width: 150px;
 }
 
 .techstack {
-	display: flex;
-	flex-direction: column;
-	min-width: 250px;
-	max-width: 350px;
+  display: flex;
+  flex-direction: column;
+  min-width: 250px;
+  max-width: 350px;
 }
 
 .techstacklist {
-	display: flex;
-	flex-wrap: wrap;
-	gap: 5px;
-	justify-content: space-around;
-	margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+  justify-content: space-around;
+  margin: auto;
 }
 
 .techstacklist > li {
-	border-radius: 10px;
-	padding: 6px;
-	background-color: rgb(116, 116, 116);
-	color: white;
-	font-size: 0.9rem;
-	position: relative;
+  border-radius: 10px;
+  padding: 6px;
+  background-color: rgb(116, 116, 116);
+  color: white;
+  font-size: 0.9rem;
+  position: relative;
 }
 
 footer {
-	text-align: center;
-	padding: 30px 0 0 0;
-	font-size: small;
+  text-align: center;
+  padding: 30px 0 0 0;
+  font-size: small;
 }
